feat: edit pages

--- a/less/index.less
+++ b/less/index.less
@@ -215,6 +215,8 @@ header {
 	}
 
 	.header-section-3 {
+		display: flex;
+		justify-content: center;
 		a {
 			background-color: whitesmoke;
 			color: black;
