--- a/css/index.css
+++ b/css/index.css
@@ -278,6 +278,10 @@ header .header-section-2 img {
 header .header-section-2 * {
   margin: 2%;
 }
+header .header-section-3 {
+  display: flex;
+  justify-content: center;
+}
 header .header-section-3 a {
   background-color: whitesmoke;
   color: black;
