--- a/less/index.less
+++ b/less/index.less
@@ -183,6 +183,19 @@ body {
 			}
 		}
 
+		section.work-history-section {
+			display: grid;
+			grid-template-columns: 1fr 4fr;
+			grid-template-rows: 1fr 1fr 1fr;
+			
+			div {
+				h2 {
+					padding: 1%;
+					align-self: center;
+				}
+			}
+		}
+
 		div {
 			display: flex;
 			justify-content: space-around;
